# five-emperors-beat-maker

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
beatmaker/: __init__.py  arpeggiator.py  arrangement.py  automation.py  builder.py  core.py  effects.py  expression.py  graph.py  harmony.py  io.py  keygroup.py  melody.py  midi.py  music.py  sequencer.py  sidechain.py  spc.py  synth.py  synths.py  utils.py
beatmaker-spc700/: pyproject.toml
beatmaker-spc700/beatmaker_spc700/: __init__.py  bridge.py  spc700_cpu.py
beatmaker/effects/: __init__.py  base.py  dynamics.py  filters.py  sidechain.py  time_based.py
beatmaker/graph/: __init__.py  analysis.py  bridge.py  channels.py  combiners.py  core.py  processors.py  sources.py
beatmaker/spc700/: __init__.py  spc700_brr.py  (+3 more)
docs/: README.md  arrangement.md  arrangement_and_expression.md  builder.md  core_and_io.md  effects.md  examples.py  keygroup_integration_guide.md  melody_and_harmony.md  melody_harmony_automation.md  midi_and_io.md  midi_and_utils.md  migration_v0.3_to_v0.4.md  music.md  quickstart.md  sequencer_and_arpeggiator.md  sequencing.md  signal_graph.md  synthesis.md
examples/: README.md  demo_complete.mid  demo_export.mid  demo_scale.mid  full_example.py  game_ost.py  nine_heavens_theme.mid  nine_heavens_theme_v2.py  the_two_forces.py
tests/: conftest.py  test_arpeggiator.py  test_arrangement.py  test_automation.py  test_builder.py  test_core.py  test_expression.py  test_harmony.py  test_io.py  test_melody.py  test_midi.py  test_music.py  test_sequencer.py  test_utils.py
(+25 files in other folders)
