[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "beatmaker"
version = "0.4.0-dev"
description = "A Python library for creating beats and songs with a fluent builder pattern"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Five Emperors Coding Council" },
]
dependencies = [
    "numpy",
    "tqdm",
]

[project.optional-dependencies]
audio = ["pydub"]
spc700 = ["beatmaker-spc700"]
dev = ["pytest", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["beatmaker*"]
exclude = ["examples*", "docs*", "downloaded_samples_etc*", "beatmaker_spc700*"]